Fix an exception with AutoMapper and renamed TextbookManage folder.

--- a/TextbookManage.WebUI/TextbookManage.WebUI.csproj
+++ b/TextbookManage.WebUI/TextbookManage.WebUI.csproj
@@ -52,8 +52,11 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
+    <Reference Include="AutoMapper, Version=3.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4, Version=3.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
     <Reference Include="CPMis, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -455,10 +458,6 @@
       <Project>{e47fcf34-a2e6-4c3f-a190-89cb80fb2a1f}</Project>
       <Name>TextbookSubscription.Repository</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TextbookManage.Infrastructure\TextbookSubscription.Infrastructure.csproj">
-      <Project>{e901854e-a721-4e21-98e9-af2c963cf07b}</Project>
-      <Name>TextbookSubscription.Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\TextbookSubscription.Application\TextbookSubscription.Application.csproj">
       <Project>{7097212d-fa39-4f7d-af7e-a2c545b0c52e}</Project>
       <Name>TextbookSubscription.Application</Name>
@@ -471,9 +470,13 @@
       <Project>{e00e2716-3ba3-4e22-bc32-50edcedd88a9}</Project>
       <Name>TextbookSubscription.IApplication</Name>
     </ProjectReference>
+    <ProjectReference Include="..\TextbookSubscription.Infrastructure\TextbookSubscription.Infrastructure.csproj">
+      <Project>{e901854e-a721-4e21-98e9-af2c963cf07b}</Project>
+      <Name>TextbookSubscription.Infrastructure</Name>
+    </ProjectReference>
     <ProjectReference Include="..\TextbookSubscription.ViewModels\TextbookSubscription.ViewModels.csproj">
       <Project>{e90bd2fa-796e-46c6-ad7e-a47f84941146}</Project>
-      <Name>TextbookManage.ViewModels</Name>
+      <Name>TextbookSubscription.ViewModels</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
@@ -502,6 +505,7 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
+  <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
