--- a/TextbookManage.WebUI/Web.config
+++ b/TextbookManage.WebUI/Web.config
@@ -19,12 +19,8 @@
   <appSettings file="AppSettings.config" />
   <!--数据库连接字符串-->
   <connectionStrings>
-    <add name="TbMISDbContext" 
-         connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
-         providerName="System.Data.SqlClient" />
-    <add name="TbMISConnectionString"
-         connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" 
-         providerName="System.Data.SqlClient" />
+    <add name="TbMISDbContext" connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TbMISConnectionString" connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--缓存-->
   <cachingConfiguration defaultCacheManager="Cache Manager">
@@ -486,6 +482,10 @@
         <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.3.0.0" newVersion="1.3.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="AutoMapper" PublicKeyToken="be96cd2c38ef1005" Culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.1.0" newVersion="7.0.1.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -498,4 +498,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  
 </configuration>
