--- a/TextbookSubscription.Application/TextbookSubscription.Application.csproj
+++ b/TextbookSubscription.Application/TextbookSubscription.Application.csproj
@@ -30,8 +30,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
+    <Reference Include="AutoMapper, Version=3.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.dll</HintPath>
+    </Reference>
+    <Reference Include="AutoMapper.Net4, Version=3.2.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.3.2.1\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -57,10 +60,6 @@
       <Project>{e47fcf34-a2e6-4c3f-a190-89cb80fb2a1f}</Project>
       <Name>TextbookSubscription.Repository</Name>
     </ProjectReference>
-    <ProjectReference Include="..\TextbookManage.Infrastructure\TextbookSubscription.Infrastructure.csproj">
-      <Project>{e901854e-a721-4e21-98e9-af2c963cf07b}</Project>
-      <Name>TextbookSubscription.Infrastructure</Name>
-    </ProjectReference>
     <ProjectReference Include="..\TextbookSubscription.Domain\TextbookSubscription.Domain.csproj">
       <Project>{c3468b9d-0b6a-4a03-a60e-c9be1589bcdd}</Project>
       <Name>TextbookSubscription.Domain</Name>
@@ -68,6 +67,10 @@
     <ProjectReference Include="..\TextbookSubscription.IApplication\TextbookSubscription.IApplication.csproj">
       <Project>{e00e2716-3ba3-4e22-bc32-50edcedd88a9}</Project>
       <Name>TextbookSubscription.IApplication</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TextbookSubscription.Infrastructure\TextbookSubscription.Infrastructure.csproj">
+      <Project>{e901854e-a721-4e21-98e9-af2c963cf07b}</Project>
+      <Name>TextbookSubscription.Infrastructure</Name>
     </ProjectReference>
     <ProjectReference Include="..\TextbookSubscription.ViewModels\TextbookSubscription.ViewModels.csproj">
       <Project>{e90bd2fa-796e-46c6-ad7e-a47f84941146}</Project>
@@ -80,4 +83,5 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.2.1\tools\AutoMapper.targets')" />
 </Project>
