--- a/TextbookManage.WebUI/TextbookManage.WebUI.csproj
+++ b/TextbookManage.WebUI/TextbookManage.WebUI.csproj
@@ -282,6 +282,7 @@
     <Content Include="App_Themes\CPMisTheme\DatePicker.skin" />
     <Content Include="App_Themes\CPMisTheme\OnFileUpdate.skin" />
     <Content Include="App_Themes\CPMisTheme\ReportViewer.skin" />
+    <Content Include="TeachingClassDetail.aspx" />
     <Content Include="TextbookImport.aspx" />
     <None Include="packages.config" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -438,6 +439,13 @@
       <DependentUpon>Import.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TeachingClassDetail.aspx.cs">
+      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TeachingClassDetail.aspx.designer.cs">
+      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
+    </Compile>
     <Compile Include="TextbookImport.aspx.cs">
       <DependentUpon>TextbookImport.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -454,10 +462,6 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TexrtbookSubscription.Repository\TextbookSubscription.Repository.csproj">
-      <Project>{e47fcf34-a2e6-4c3f-a190-89cb80fb2a1f}</Project>
-      <Name>TextbookSubscription.Repository</Name>
-    </ProjectReference>
     <ProjectReference Include="..\TextbookSubscription.Application\TextbookSubscription.Application.csproj">
       <Project>{7097212d-fa39-4f7d-af7e-a2c545b0c52e}</Project>
       <Name>TextbookSubscription.Application</Name>
@@ -473,6 +477,10 @@
     <ProjectReference Include="..\TextbookSubscription.Infrastructure\TextbookSubscription.Infrastructure.csproj">
       <Project>{e901854e-a721-4e21-98e9-af2c963cf07b}</Project>
       <Name>TextbookSubscription.Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TextbookSubscription.Repository\TextbookSubscription.Repository.csproj">
+      <Project>{e47fcf34-a2e6-4c3f-a190-89cb80fb2a1f}</Project>
+      <Name>TextbookSubscription.Repository</Name>
     </ProjectReference>
     <ProjectReference Include="..\TextbookSubscription.ViewModels\TextbookSubscription.ViewModels.csproj">
       <Project>{e90bd2fa-796e-46c6-ad7e-a47f84941146}</Project>
