--- a/TextbookSubscription.ViewModels/TextbookSubscription.ViewModels.csproj
+++ b/TextbookSubscription.ViewModels/TextbookSubscription.ViewModels.csproj
@@ -36,7 +36,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +59,7 @@
     <Compile Include="ImportStudentDeclarationView.cs" />
     <Compile Include="TermView.cs" />
     <Compile Include="BaseViewModel.cs" />
+    <Compile Include="WebCustomControl1.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
