--- a/TextbookManage.WebUI/Web.config
+++ b/TextbookManage.WebUI/Web.config
@@ -21,9 +21,9 @@
   
   <!--数据库连接字符串-->
   <connectionStrings>
-    <add name="TbMISDbContext" connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TbMISDbContext" connectionString="Data Source=(local)\SQLSERVER;initial catalog=TbMIS;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="USCTAMisConnectionString" connectionString="Data Source=(local)\SQLSERVER;Initial Catalog=TbMIS;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="TbMISConnectionString" connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TbMISConnectionString" connectionString="Data Source=(local)\SQLSERVER;initial catalog=TbMIS;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <!--缓存-->
