导入申报UI(待完善...)

--- a/TextbookManage.WebUI/Web.config
+++ b/TextbookManage.WebUI/Web.config
@@ -19,8 +19,15 @@
   <appSettings file="AppSettings.config" />
   <!--数据库连接字符串-->
   <connectionStrings>
-    <add name="TbMISDbContext" connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="TbMISConnectionString" connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TbMISDbContext"
+         connectionString="Data Source=LAPTOP-V9GFK3UE;Initial Catalog=TbMIS;User ID=sa;Password=123"
+         providerName="System.Data.SqlClient" />
+    <add name="USCTAMisConnectionString"
+         connectionString="Data Source=LAPTOP-V9GFK3UE;Initial Catalog=TbMIS;User ID=sa;Password=123"
+         providerName="System.Data.SqlClient" />
+    <add name="TbMISConnectionString"
+         connectionString="Data Source=LAPTOP-V9GFK3UE;Initial Catalog=TbMIS;User ID=sa;Password=123"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--缓存-->
   <cachingConfiguration defaultCacheManager="Cache Manager">
@@ -484,7 +491,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="AutoMapper" PublicKeyToken="be96cd2c38ef1005" Culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.2.1.0" newVersion="7.0.1.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.1.0" newVersion="3.2.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
