--- a/TextbookManage.WebUI/TextbookManage.WebUI.csproj
+++ b/TextbookManage.WebUI/TextbookManage.WebUI.csproj
@@ -282,7 +282,14 @@
     <Content Include="App_Themes\CPMisTheme\DatePicker.skin" />
     <Content Include="App_Themes\CPMisTheme\OnFileUpdate.skin" />
     <Content Include="App_Themes\CPMisTheme\ReportViewer.skin" />
-    <Content Include="TextbookImport.aspx" />
+    <Content Include="ImportDeclaration.aspx" />
+    <Content Include="WindowForMessage\AddDeclaration.aspx">
+      <BrowseToURL>~/AddDeclaration.aspx</BrowseToURL>
+    </Content>
+    <Content Include="WindowForMessage\QueryTextbookNameByIsbn.aspx">
+      <BrowseToURL>~/WindowForMessage/QueryTextbook.aspx</BrowseToURL>
+    </Content>
+    <Content Include="WindowForMessage\TeachingClassDetail.aspx" />
     <None Include="packages.config" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.7.2.js" />
@@ -438,14 +445,35 @@
       <DependentUpon>Import.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextbookImport.aspx.cs">
-      <DependentUpon>TextbookImport.aspx</DependentUpon>
+    <Compile Include="ImportDeclaration.aspx.cs">
+      <DependentUpon>ImportDeclaration.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="TextbookImport.aspx.designer.cs">
-      <DependentUpon>TextbookImport.aspx</DependentUpon>
+    <Compile Include="ImportDeclaration.aspx.designer.cs">
+      <DependentUpon>ImportDeclaration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WindowForMessage\AddDeclaration.aspx.cs">
+      <DependentUpon>AddDeclaration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WindowForMessage\AddDeclaration.aspx.designer.cs">
+      <DependentUpon>AddDeclaration.aspx</DependentUpon>
     </Compile>
     <Compile Include="UnityBootstrapper.cs" />
+    <Compile Include="WindowForMessage\QueryTextbookNameByIsbn.aspx.cs">
+      <DependentUpon>QueryTextbookNameByIsbn.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WindowForMessage\QueryTextbookNameByIsbn.aspx.designer.cs">
+      <DependentUpon>QueryTextbookNameByIsbn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="WindowForMessage\TeachingClassDetail.aspx.cs">
+      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="WindowForMessage\TeachingClassDetail.aspx.designer.cs">
+      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="AppSettings.config" />
@@ -478,6 +506,9 @@
       <Project>{e90bd2fa-796e-46c6-ad7e-a47f84941146}</Project>
       <Name>TextbookSubscription.ViewModels</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ExcelName\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
