--- a/TextbookSubsciption.RepositoryTests/App.config
+++ b/TextbookSubsciption.RepositoryTests/App.config
@@ -15,7 +15,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="TbMISDbContext" connectionString="data source=.\SQLSERVER;initial catalog=TbMIS;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TbMISDbContext" connectionString="Data Source=LAPTOP-U0S2C99P;Initial Catalog=TbMIS;User ID=sa;Password=123456" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
