--- a/TextbookSubscription.Domain/TextbookSubscription.Domain.csproj
+++ b/TextbookSubscription.Domain/TextbookSubscription.Domain.csproj
@@ -51,14 +51,21 @@
   <ItemGroup>
     <Compile Include="AggregateRoot.cs" />
     <Compile Include="EFRepositoryDbContext.cs" />
+    <Compile Include="EntityMapping\DepartmentMap.cs" />
     <Compile Include="EntityMapping\ProfessionalClassMap.cs" />
+    <Compile Include="EntityMapping\SchoolMap.cs" />
     <Compile Include="EntityMapping\TermMap.cs" />
+    <Compile Include="Entity\Department.cs" />
     <Compile Include="Entity\ProfessionalClass.cs" />
+    <Compile Include="Entity\School.cs" />
+    <Compile Include="Entity\TextBook.cs" />
     <Compile Include="IAggregateRoot.cs" />
     <Compile Include="IEFRepositoryDbContext.cs" />
     <Compile Include="IEntity.cs" />
+    <Compile Include="IRepositories\IDepartmentRepository.cs" />
     <Compile Include="IRepositories\IProfessionalClassRepository.cs" />
     <Compile Include="IRepositories\IRepository.cs" />
+    <Compile Include="IRepositories\ISchoolRepository.cs" />
     <Compile Include="IRepositories\ITermRepository.cs" />
     <Compile Include="IRepositoryDbContext.cs" />
     <Compile Include="ISql.cs" />
