--- a/TextbookSubscription.IApplication/TextbookSubscription.IApplication.csproj
+++ b/TextbookSubscription.IApplication/TextbookSubscription.IApplication.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IDepartmentAppl.cs" />
     <Compile Include="ISchoolAppl.cs" />
     <Compile Include="ITermAppl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
