--- a/TextbookSubscription.Repository/TextbookSubscription.Repository.csproj
+++ b/TextbookSubscription.Repository/TextbookSubscription.Repository.csproj
@@ -50,16 +50,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartmentRepository.cs" />
     <Compile Include="EFRepository.cs" />
     <Compile Include="ProfessionalClassRepository.cs" />
     <Compile Include="Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SchoolRepository.cs" />
     <Compile Include="TermRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TextbookSubscription.Domain\TextbookSubscription.Domain.csproj">
       <Project>{c3468b9d-0b6a-4a03-a60e-c9be1589bcdd}</Project>
       <Name>TextbookSubscription.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TextbookSubscription.Infrastructure\TextbookSubscription.Infrastructure.csproj">
+      <Project>{E901854E-A721-4E21-98E9-AF2C963CF07B}</Project>
+      <Name>TextbookSubscription.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
