--- a/TextbookManage.WebUI/TextbookManage.WebUI.csproj
+++ b/TextbookManage.WebUI/TextbookManage.WebUI.csproj
@@ -482,7 +482,7 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TexrtbookSubscription.Repository\TextbookSubscription.Repository.csproj">
+    <ProjectReference Include="..\TextbookSubscription.Repository\TextbookSubscription.Repository.csproj">
       <Project>{e47fcf34-a2e6-4c3f-a190-89cb80fb2a1f}</Project>
       <Name>TextbookSubscription.Repository</Name>
     </ProjectReference>
@@ -509,6 +509,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ExcelName\" />
+    <Folder Include="Upload\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
