--- a/TextbookManage.WebUI/TextbookManage.WebUI.csproj
+++ b/TextbookManage.WebUI/TextbookManage.WebUI.csproj
@@ -283,14 +283,12 @@
     <Content Include="App_Themes\CPMisTheme\OnFileUpdate.skin" />
     <Content Include="App_Themes\CPMisTheme\ReportViewer.skin" />
     <Content Include="ImportDeclaration.aspx" />
-    <Content Include="WindowForMessage\AddDeclaration.aspx">
-      <BrowseToURL>~/AddDeclaration.aspx</BrowseToURL>
-    </Content>
-    <Content Include="WindowForMessage\QueryTextbookNameByIsbn.aspx">
-      <BrowseToURL>~/WindowForMessage/QueryTextbook.aspx</BrowseToURL>
-    </Content>
-    <Content Include="WindowForMessage\TeachingClassDetail.aspx" />
+    <Content Include="MessageWindows\AddDeclaration.aspx" />
+    <Content Include="MessageWindows\QueryTextbookNameByIsbn.aspx" />
+    <Content Include="MessageWindows\TeachingClassDetail.aspx" />
+    <Content Include="Modify.aspx" />
     <None Include="packages.config" />
+    <Content Include="ModifyDeclaration.aspx" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.7.2.js" />
     <Content Include="Scripts\jquery.easyui.min.js" />
@@ -444,6 +442,41 @@
     <Compile Include="Import.aspx.designer.cs">
       <DependentUpon>Import.aspx</DependentUpon>
     </Compile>
+    <Compile Include="MessageWindows\AddDeclaration.aspx.cs">
+      <DependentUpon>AddDeclaration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MessageWindows\AddDeclaration.aspx.designer.cs">
+      <DependentUpon>AddDeclaration.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MessageWindows\QueryTextbookNameByIsbn.aspx.cs">
+      <DependentUpon>QueryTextbookNameByIsbn.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MessageWindows\QueryTextbookNameByIsbn.aspx.designer.cs">
+      <DependentUpon>QueryTextbookNameByIsbn.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="MessageWindows\TeachingClassDetail.aspx.cs">
+      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="MessageWindows\TeachingClassDetail.aspx.designer.cs">
+      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Modify.aspx.cs">
+      <DependentUpon>Modify.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Modify.aspx.designer.cs">
+      <DependentUpon>Modify.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ModifyDeclaration.aspx.cs">
+      <DependentUpon>ModifyDeclaration.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ModifyDeclaration.aspx.designer.cs">
+      <DependentUpon>ModifyDeclaration.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ImportDeclaration.aspx.cs">
       <DependentUpon>ImportDeclaration.aspx</DependentUpon>
@@ -452,28 +485,7 @@
     <Compile Include="ImportDeclaration.aspx.designer.cs">
       <DependentUpon>ImportDeclaration.aspx</DependentUpon>
     </Compile>
-    <Compile Include="WindowForMessage\AddDeclaration.aspx.cs">
-      <DependentUpon>AddDeclaration.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="WindowForMessage\AddDeclaration.aspx.designer.cs">
-      <DependentUpon>AddDeclaration.aspx</DependentUpon>
-    </Compile>
     <Compile Include="UnityBootstrapper.cs" />
-    <Compile Include="WindowForMessage\QueryTextbookNameByIsbn.aspx.cs">
-      <DependentUpon>QueryTextbookNameByIsbn.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="WindowForMessage\QueryTextbookNameByIsbn.aspx.designer.cs">
-      <DependentUpon>QueryTextbookNameByIsbn.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="WindowForMessage\TeachingClassDetail.aspx.cs">
-      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="WindowForMessage\TeachingClassDetail.aspx.designer.cs">
-      <DependentUpon>TeachingClassDetail.aspx</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="AppSettings.config" />
